# CG-Solar-System

./: .gitignore  README.md
Engine/: CMakeLists.txt  catMR.cpp  catMR.h  groupModel.cpp  groupModel.h  headers.h  lights.cpp  lights.h  main.cpp  model.cpp  model.h  operation3f.cpp  operation3f.h  parser.cpp  parser.h  rotation.cpp  rotation.h  scale.cpp  scale.h  shapes.xml  shine.cpp  shine.h  solarSystem.xml  translation.cpp  translation.h  vertex.cpp  vertex.h  xmlParser.cpp  xmlParser.h
Generator/: CMakeLists.txt  generator.sln
Generator/generator/: bezier.cpp  bezier.h  box.cpp  box.h  circle.cpp  circle.h  common.h  cone.cpp  cone.h  generator.cpp  generator.vcxproj  generator.vcxproj.filters  plane.cpp  plane.h  point.cpp  point.h  sphere.cpp  sphere.h  write.cpp  write.h
GuioesPL/Guiao6/: main.cpp
GuioesPL/Guiao7/: main.cpp
GuioesPL/Guiao8/: catmull-rom.cpp
